--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.19",
-    "pg": "^8.8.0"
+    "pg": "^8.8.0",
+    "yup": "^0.32.11"
   }
 }
