--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "nodemon server.js"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
