--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
+    "email-validator": "^2.0.4",
     "express": "^4.18.1",
     "helmet": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "make-runnable": "^1.3.10",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
+    "password-validator": "^5.3.0",
     "pg": "^8.8.0",
-    "yup": "^0.32.11"
+    "validator": "^13.7.0"
   }
 }
